@startuml
class Customer {
  -Integer customerID
  -String name
  -String address
  +Customer(String name, String address)
  +Integer getCustomerID()
  +String getName()
  +String getAddress()
}

class Delivery {
  -Integer deliveryID
  -String itemName
  -double itemWeight
  -String deliveryStatus
  -Customer customer
  +Delivery(String itemName, double itemWeight, Customer customer)
  +Integer getDeliveryID()
  +String getItemName()
  +double getItemWeight()
  +String getDeliveryStatus()
  +void markAsDelivered()
}

class DeliveryService {
  -List<Customer> customers
  -List<Delivery> deliveries
  +Customer getCustomer(Integer id)
  +Customer registerCustomer(String name, String address)
  +List<Customer> getCustomers()
  +void displayRegisteredCustomers()
  +Delivery getDelivery(int id)
  +Delivery placeDelivery(String itemName, double itemWeight, Customer customer)
  +List<Delivery> getDeliveries()
  +void markDeliveryAsDelivered(String deliveryID)
  +void displayDeliveries()

}

class Main {
  +static void main(String[] args)
  -void displayMenu()
  -void registerCustomer()
  -void displayCustomers()
  -void placeDelivery()
  -void displayDeliveries()
  -void markDeliveryAsDelivered()
}

Customer "1" --> "0..*" Delivery : "places"
DeliveryService "1" *--> "0..*" Customer : "manages"
DeliveryService "1" *--> "0..*" Delivery : "manages"
Main --> DeliveryService : "uses"
@enduml
